--- a/index.html
+++ b/index.html
@@ -3,9 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="./images/drum-icon.svg">
+    <link rel="stylesheet" href="./styles.css">
+    <script src="script.js" defer></script>
+    <title>Drum Kit</title>
 </head>
 <body>
-    
+    <main class="keys">
+        <article data-key="65" class="key">
+            <kbd>a</kbd>
+            <p class="sound">clap</p>
+        </article>
+        <article data-key="83" class="key">
+            <kbd>s</kbd>
+            <p class="sound">hi-hat</p>
+        </article>
+        <article data-key="68" class="key">
+            <kbd>d</kbd>
+            <p class="sound">kick</p>
+        </article>
+        <article data-key="70" class="key">
+            <kbd>f</kbd>
+            <p class="sound">openhat</p>
+        </article>
+        <article data-key="71" class="key">
+            <kbd>g</kbd>
+            <p class="sound">boom</p>
+        </article>
+        <article data-key="72" class="key">
+            <kbd>h</kbd>
+            <p class="sound">ride</p>
+        </article>
+        <article data-key="74" class="key">
+            <kbd>j</kbd>
+            <p class="sound">snare</p>
+        </article>
+        <article data-key="75" class="key">
+            <kbd>k</kbd>
+            <p class="sound">tom</p>
+        </article>
+        <article data-key="76" class="key">
+            <kbd>l</kbd>
+            <p class="sound">tink</p>
+        </article>
+    </main>
+
+    <audio data-key="65" src="sounds/clap.wav"></audio>
+    <audio data-key="83" src="sounds/hihat.wav"></audio>
+    <audio data-key="68" src="sounds/kick.wav"></audio>
+    <audio data-key="70" src="sounds/openhat.wav"></audio>
+    <audio data-key="71" src="sounds/boom.wav"></audio>
+    <audio data-key="72" src="sounds/ride.wav"></audio>
+    <audio data-key="74" src="sounds/snare.wav"></audio>
+    <audio data-key="75" src="sounds/tom.wav"></audio>
+    <audio data-key="76" src="sounds/tink.wav"></audio>
+
 </body>
 </html>
