Change data-key values from keyCode to key values

--- a/index.html
+++ b/index.html
@@ -10,53 +10,53 @@
 </head>
 <body>
     <main class="keys">
-        <article data-key="65" class="key">
+        <article data-key="a" class="key">
             <kbd>a</kbd>
             <p class="sound">clap</p>
         </article>
-        <article data-key="83" class="key">
+        <article data-key="s" class="key">
             <kbd>s</kbd>
             <p class="sound">hi-hat</p>
         </article>
-        <article data-key="68" class="key">
+        <article data-key="d" class="key">
             <kbd>d</kbd>
             <p class="sound">kick</p>
         </article>
-        <article data-key="70" class="key">
+        <article data-key="f" class="key">
             <kbd>f</kbd>
             <p class="sound">openhat</p>
         </article>
-        <article data-key="71" class="key">
+        <article data-key="g" class="key">
             <kbd>g</kbd>
             <p class="sound">boom</p>
         </article>
-        <article data-key="72" class="key">
+        <article data-key="h" class="key">
             <kbd>h</kbd>
             <p class="sound">ride</p>
         </article>
-        <article data-key="74" class="key">
+        <article data-key="j" class="key">
             <kbd>j</kbd>
             <p class="sound">snare</p>
         </article>
-        <article data-key="75" class="key">
+        <article data-key="k" class="key">
             <kbd>k</kbd>
             <p class="sound">tom</p>
         </article>
-        <article data-key="76" class="key">
+        <article data-key="l" class="key">
             <kbd>l</kbd>
             <p class="sound">tink</p>
         </article>
     </main>
 
-    <audio data-key="65" src="sounds/clap.wav"></audio>
-    <audio data-key="83" src="sounds/hihat.wav"></audio>
-    <audio data-key="68" src="sounds/kick.wav"></audio>
-    <audio data-key="70" src="sounds/openhat.wav"></audio>
-    <audio data-key="71" src="sounds/boom.wav"></audio>
-    <audio data-key="72" src="sounds/ride.wav"></audio>
-    <audio data-key="74" src="sounds/snare.wav"></audio>
-    <audio data-key="75" src="sounds/tom.wav"></audio>
-    <audio data-key="76" src="sounds/tink.wav"></audio>
+    <audio data-key="a" src="sounds/clap.wav"></audio>
+    <audio data-key="s" src="sounds/hihat.wav"></audio>
+    <audio data-key="d" src="sounds/kick.wav"></audio>
+    <audio data-key="f" src="sounds/openhat.wav"></audio>
+    <audio data-key="g" src="sounds/boom.wav"></audio>
+    <audio data-key="h" src="sounds/ride.wav"></audio>
+    <audio data-key="j" src="sounds/snare.wav"></audio>
+    <audio data-key="k" src="sounds/tom.wav"></audio>
+    <audio data-key="l" src="sounds/tink.wav"></audio>
 
 </body>
 </html>
