--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
             <p class="sound">tink</p>
         </article>
     </main>
+    <footer class="attribution">
+        <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="https://github.com/elizerdim" target="_blank">Eliz Erdim</a>. Background image by <a href="https://www.freepik.com/" target="_blank">Freepik</a></p>
+    </footer>
 
     <audio data-key="a" src="sounds/clap.wav"></audio>
     <audio data-key="s" src="sounds/hihat.wav"></audio>
