Fix attribution section

--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
         </article>
     </main>
     <footer class="attribution">
-        <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="https://github.com/elizerdim" target="_blank">Eliz Erdim</a>. Background image by <a href="https://www.freepik.com/" target="_blank">Freepik</a></p>
+        <p>Challenge by <a href="https://javascript30.com/" target="_blank">JavaScript30</a>. Background image by <a href="https://www.freepik.com/" target="_blank">Freepik</a>. Coded by <a href="https://github.com/elizerdim" target="_blank">Eliz Erdim</a>.</p>
     </footer>
 
     <audio data-key="a" src="sounds/clap.wav"></audio>
