Replace KeyboardEvent.key property with KeyboardEvent.code property

--- a/index.html
+++ b/index.html
@@ -10,39 +10,39 @@
 </head>
 <body>
     <main class="keys">
-        <article data-key="a" class="key">
+        <article data-key="KeyA" class="key">
             <kbd>a</kbd>
             <p class="sound">clap</p>
         </article>
-        <article data-key="s" class="key">
+        <article data-key="KeyS" class="key">
             <kbd>s</kbd>
             <p class="sound">hi-hat</p>
         </article>
-        <article data-key="d" class="key">
+        <article data-key="KeyD" class="key">
             <kbd>d</kbd>
             <p class="sound">kick</p>
         </article>
-        <article data-key="f" class="key">
+        <article data-key="KeyF" class="key">
             <kbd>f</kbd>
             <p class="sound">openhat</p>
         </article>
-        <article data-key="g" class="key">
+        <article data-key="KeyG" class="key">
             <kbd>g</kbd>
             <p class="sound">boom</p>
         </article>
-        <article data-key="h" class="key">
+        <article data-key="KeyH" class="key">
             <kbd>h</kbd>
             <p class="sound">ride</p>
         </article>
-        <article data-key="j" class="key">
+        <article data-key="KeyJ" class="key">
             <kbd>j</kbd>
             <p class="sound">snare</p>
         </article>
-        <article data-key="k" class="key">
+        <article data-key="KeyK" class="key">
             <kbd>k</kbd>
             <p class="sound">tom</p>
         </article>
-        <article data-key="l" class="key">
+        <article data-key="KeyL" class="key">
             <kbd>l</kbd>
             <p class="sound">tink</p>
         </article>
@@ -51,15 +51,15 @@
         <p>Challenge by <a href="https://javascript30.com/" target="_blank">JavaScript30</a>. Background image by <a href="https://www.freepik.com/" target="_blank">Freepik</a>. Coded by <a href="https://github.com/elizerdim" target="_blank">Eliz Erdim</a>.</p>
     </footer>
 
-    <audio data-key="a" src="sounds/clap.wav"></audio>
-    <audio data-key="s" src="sounds/hihat.wav"></audio>
-    <audio data-key="d" src="sounds/kick.wav"></audio>
-    <audio data-key="f" src="sounds/openhat.wav"></audio>
-    <audio data-key="g" src="sounds/boom.wav"></audio>
-    <audio data-key="h" src="sounds/ride.wav"></audio>
-    <audio data-key="j" src="sounds/snare.wav"></audio>
-    <audio data-key="k" src="sounds/tom.wav"></audio>
-    <audio data-key="l" src="sounds/tink.wav"></audio>
+    <audio data-key="KeyA" src="sounds/clap.wav"></audio>
+    <audio data-key="KeyS" src="sounds/hihat.wav"></audio>
+    <audio data-key="KeyD" src="sounds/kick.wav"></audio>
+    <audio data-key="KeyF" src="sounds/openhat.wav"></audio>
+    <audio data-key="KeyG" src="sounds/boom.wav"></audio>
+    <audio data-key="KeyH" src="sounds/ride.wav"></audio>
+    <audio data-key="KeyJ" src="sounds/snare.wav"></audio>
+    <audio data-key="KeyK" src="sounds/tom.wav"></audio>
+    <audio data-key="KeyL" src="sounds/tink.wav"></audio>
 
 </body>
 </html>
